# solar2clone

./: .gitignore  CMakeLists.txt
include/: asteroid.hpp  body.hpp  config.hpp  entity.hpp  game.hpp
src/: asteroid.cpp  body.cpp  entity.cpp  game.cpp  main.cpp
